// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render expense summary 1`] = `
<div>
  <h1>
    viewing 
    1
     
    expense
     totalling 
    $3.53
  </h1>
</div>
`;

exports[`should render expense summary with multiple expenses 1`] = `
<div>
  <h1>
    viewing 
    23
     
    expenses
     totalling 
    $3,543,534.53
  </h1>
</div>
`;
